<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:alpha="0.8">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/image_login"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/image_thumbnail" />


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/white"
        style="@style/CustomCardViewStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="30dp"
                    android:text="@string/sign_in"
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter"
                    app:layout_constraintTop_toBottomOf="@+id/title"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailEditTextLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeWidth="3dp"
                    app:boxStrokeColor="@color/black"
                    app:errorEnabled="true"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="50dp"
                    app:startIconDrawable="@drawable/ic_baseline_email_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description">

                    <com.example.mobiledevelopment.ui.custom.CustomEmailText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordEditTextLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="3dp"
                    app:boxStrokeColor="@color/black"
                    app:endIconMode="password_toggle"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout">

                    <com.example.mobiledevelopment.ui.custom.CustomPasswordText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.example.mobiledevelopment.ui.custom.CustomButton
                    android:id="@+id/btnLogin"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:text="@string/sign_in"
                    android:layout_marginEnd="10dp"
                    style="@style/AppTheme.RoundedCornerMaterialButton"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/buttonColor"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>